--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -77,6 +77,7 @@ jobs:
           TOKEN=$(curl -sSL -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
             "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=scorecard.dev" | jq -r '.value')
           echo "OIDC_TOKEN=$TOKEN" >> $GITHUB_ENV
+          echo "$OIDC_TOKEN" | cut -d. -f2 | base64 -d | jq
 
       - name: Prepare and upload Scorecard results
         env:
