--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -22,7 +22,8 @@ jobs:
       # Uncomment the permissions below if installing in a private repository.
       # contents: read
       # actions: read
-
+      contents: read
+      
     steps:
       - name: "Checkout code"
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -70,15 +71,23 @@ jobs:
 #        with:
 #          sarif_file: results.sarif
 
-      - name: Get GitHub OIDC token
+      - name: Request GitHub OIDC token for Scorecard
         id: oidc
         run: |
           echo "Requesting GitHub OIDC token for audience=scorecard.dev..."
-          TOKEN=$(curl -sSL -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=scorecard.dev" | jq -r '.value')
-          echo "OIDC_TOKEN=$TOKEN" >> $GITHUB_ENV
-          echo "$OIDC_TOKEN" | cut -d. -f2 | base64 -d | jq
+          TOKEN=$(curl -sSL \
+            -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+            "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=scorecard.dev" \
+            | jq -r '.value')
 
+          if [ -z "$TOKEN" ] || [ "$TOKEN" = "null" ]; then
+            echo "❌ Failed to get OIDC token"
+            exit 1
+          fi
+
+          echo "OIDC_TOKEN=$TOKEN" >> $GITHUB_ENV
+          echo "✅ Token successfully retrieved."
+          
       - name: Prepare and upload Scorecard results
         env:
           OIDC_TOKEN: ${{ env.OIDC_TOKEN }}
